--- a/index.html
+++ b/index.html
@@ -9,37 +9,10 @@
   </head>
   <body id="gradient">
     <h1>Background Generator</h1>
-    <input
-      id="color1"
-      class="jscolor {onFineChange:'update(this)'}"
-      value="ff0000"
-    />
-    <input
-      id="color2"
-      class="jscolor {onFineChange:'update(this)'}"
-      value="ffff00"
-    />
+    <input type="color" id="color1" value="#ff0000" />
+    <input type="color" id="color2" value="#ffff00" />
     <h2>Current CSS Background</h2>
     <h3></h3>
-    <script:src='https://code.jquery.com/jquery-3.3.1.min.js'></script>
-    <script src="jscolor.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
-
-<!-- <script src="jscolor.js"></script>
-
-<p>onFineChange gets executed more often, even on the finest change
-    as we move mouse over the picker controls.
-
-<p>Rectangle color:
-<input class="jscolor {onFineChange:'update(this)'}" value="cc66ff">
-
-<p id="rect" style="border:1px solid gray; width:161px; height:100px;">
-
-<script>
-function update(jscolor) {
-    // 'jscolor' instance can be used as a string
-    document.getElementById('rect').style.backgroundColor = '#' + jscolor
-}
-</script> -->
