Add a random button that will display a random gradient

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Background Generator</h1>
     <input type="color" id="color1" value="#ff0000" />
     <input type="color" id="color2" value="#ffff00" />
+    <input type="button" value="Randomize" id="randomize" />
     <h2>Current CSS Background</h2>
     <h3></h3>
     <script src="script.js"></script>
